@@ -1,6 +1,10 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: Handling `default' argument in @finder<-get_file.
+  (Lourens van der Meij).
+
+
 VERSION 6.1.5, distributed with SWI-Prolog 5.1.5
 ================================================
 
